--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "url-metadata": "^2.4.1",
     "vue": "^2.6.12",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
